<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/whitebackg"
    tools:context=".MainActivity"
    >

    <TextView
        android:id="@+id/authentification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/authentification_msg"
        android:textColor="@color/black"
        android:textSize="32dp"
        />

    <EditText
        android:id="@+id/editTextEmailAddress"
        android:layout_width="238dp"
        android:layout_height="64dp"
        android:layout_marginTop="84dp"
        android:ems="10"
        android:hint="@string/authentification_login"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20dp"
       />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="233dp"
        android:layout_height="58dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/authentification_password"
        android:textSize="20dp"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
     />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/save_data" />

    <TextView
        android:id="@+id/sing_up"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/link_to_register_activity" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@color/black"
        android:text="@string/authentification_button_login"
        app:backgroundTint="@color/black"
         />




</LinearLayout>