<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:id="@+id/register_layout"
    android:background="@drawable/whitebackg"
    tools:context=".ActivityRegister"
    >

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_msg"
        android:textColor="@color/black"
        android:textSize="32dp"
         />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="238dp"
        android:layout_height="64dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/register_name"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/editTextEmailAddress"
        android:layout_width="238dp"
        android:layout_height="64dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/authentification_login"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="238dp"
        android:layout_height="64dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/authentification_password"
        android:textSize="20dp"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        />

    <TextView
        android:id="@+id/sing_in"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/link_to_login_activity" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/black"
        android:text="@string/register_button"
        app:backgroundTint="@color/black"
         />

</LinearLayout>