<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/whitebackg"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivityRestaurantDescription">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="12dp" />


    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="#2B0101"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textSize="18sp"
        android:layout_gravity = "center"
        />

    <Button
        android:id="@+id/button_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/button_background"
        android:text="@string/call_restaurant_button"
        android:layout_gravity = "center"
        />

    <Button
        android:id="@+id/button_get_current_Position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:background="@drawable/button_background"
        android:text="@string/current_location_button"
        android:layout_gravity = "center"
        />

    <Button
        android:id="@+id/button_itineraire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_background"
        android:text="@string/itineraire_button"
        android:layout_gravity = "center"
        />

    <Button
        android:id="@+id/menu_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:background="@drawable/button_background"
        android:text="@string/see_menu_button"
        android:layout_gravity = "center"
        />



</LinearLayout>